--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,40 @@
 version: "3"
 services:
-  service-v1:
-    hostname: message-v1
-    build: message/
-    ports:
-      - "9007:9007"
+  registrator:
+    image: gliderlabs/registrator
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock
+    command: -internal consul://consul:8500
+    depends_on:
+      - consul
     links:
+      - consul
+
+  #############################
+  consul: 
+    image: consul
+    command: "agent -server -bootstrap -ui -client=0.0.0.0 -bind='{{ GetPrivateIP }}'"
+  
+  #############################
+  balancer:
+    image: haproxy:1.8-alpine
+    depends_on:
+      - registrator
+    links:
+      - registrator
+    volumes:
+      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
+    ports:
+      - 48151:48151
+  #############################
+  service-v1:
+    build: message-v1/
+    ports:
+      - 80
+    deploy:
+      replicas: 4
+    links:
+      - balancer
       - messageapp
       - mongodb_message
       - replica_message
@@ -16,40 +45,29 @@ services:
       - mongodb_message
       - replica_message
       - redis
-    
-#  message2:
-#    hostname: message2
-#    build: message/
-#    ports:
-#      - "9009:9007"
-#    links:
-#      - messageapp
-#      - mongodb_message
-#      - replica_message
-#      - redis
-#      - credit
-#    depends_on:
-#      - messageapp
-#      - mongodb_message
-#      - replica_message
-#      - redis
-#
-#  message3:
-#    hostname: message3
-#    build: message/
-#    ports:
-#      - "9010:9007"
-#    links:
-#      - messageapp
-#      - mongodb_message
-#      - replica_message
-#      - redis
-#      - credit
-#    depends_on:
-#      - messageapp
-#      - mongodb_message
-#      - replica_message
-#      - redis
+    environment:
+    - SERVICE_NAME=service-v1
+  service-v2:
+    image: exercise9_service-v2
+    #build: message-v2/
+    ports:
+      - 80
+    deploy:
+      replicas: 4
+    links:
+      - balancer
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+      - credit
+    depends_on:
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+    environment:
+    - SERVICE_NAME=service-v2
   credit:
     build: credit/
     ports:
@@ -97,45 +115,15 @@ services:
       - ./message/data/replica:/message/data/replica
     ports:
       - 27018:27018
-
   redis:
     image: redis
     ports:
       - 6379:6379
     volumes:
       - ./data/redis:/data/redis
-  #haproxy:
-  #  image: haproxy
-  #  build: haproxy/
-  #  ports:
-  #    - 80:80
-  #  expose:
-  #    - 80
-  #############################
-  registrator:
-    image: gliderlabs/registrator
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock
-    command: -internal consul://consul:8500
-    depends_on:
-      - consul
-    links:
-      - consul
-  #############################
-  consul: 
-    image: consul
-    command: "agent -server -bootstrap -ui -client=0.0.0.0 -bind='{{ GetPrivateIP }}'"
-  #############################
-  balancer:
-    image: haproxy:1.8-alpine
-    depends_on:
-      - registrator
-    links:
-      - registrator
-    volumes:
-      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
-    ports:
-      - 48151:48151
+
+  
+
   
  
     
