--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -32,12 +32,16 @@ frontend general
   default_backend app
 
 backend app
+   stats enable
+   option httpchk GET /hostname
+   http-check expect status 200
+   stats uri /haproxy
    mode     http
    balance  roundrobin
-   server-template appv1 5 service-v1.service.consul:8080 inter 1s resolvers consul resolve-prefer ipv4 check weight 90
-   server-template appv2 1 service-v2.service.consul:8080 inter 1s resolvers consul resolve-prefer ipv4 check weight 10
+   server-template appv1 5 service-v1.service.consul:9007 inter 1s resolvers consul resolve-prefer ipv4 check weight 80%
+   server-template appv2 1 service-v2.service.consul:9007 inter 1s resolvers consul resolve-prefer ipv4 check weight 20%
 
 backend canary
    mode     http
    balance  roundrobin
-   server-template app 5 service-v2.service.consul:8080 inter 1s resolvers consul resolve-prefer ipv4 check
+   server-template app 1 service-v2.service.consul:9007 inter 1s resolvers consul resolve-prefer ipv4 check
