the /version end point now returns the service + the container id

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -27,7 +27,7 @@ frontend general
   bind :48151
   maxconn 10000
   option httplog
-  acl mistery_shopper hdr(MISTERY_SHOPPER) -i
+  acl mistery_shopper req.hdr(MISTERY_SHOPPER) -m found
   use_backend canary if mistery_shopper
   default_backend app
 
