--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - 48151:48151
   #############################
   service-v1:
+    hostname: service-v1
     build: message-v1/
     ports:
       - 80
@@ -48,6 +49,7 @@ services:
     environment:
     - SERVICE_NAME=service-v1
   service-v2:
+    hostname: service-v2
     #image: exercise9_service-v2
     build: message-v2/
     ports:
