docker-compose.yml now pulling image from docker hub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     - PORT=9007
     - SERVICE_NAME=service-v1
   service-v2:
-    image: exercise9_service-v2
+    image: rickalon/messagecanary
     build: message-v2/
     ports:
       - 80
